# showcontrol

./: .gitattributes  README.md  meson.build  pyproject.toml
config/: schedule.yml  showcontrol_config.yml
configs/: oscRouterConfig.yml
readable_schedules/: hufoprogram_2025-01-28_full_schedule.txt
scripts/: schedule_generator.py
src/showcontrol/: __init__.py  api.py  app.py  auth.py  config.py  schedcontrol.py  schedule_generator.py  showcontrol.py
src/showcontrol/static/assets/: index.css  index.js
src/showcontrol/templates/: base.html  viewer.html
src/webcontrol/: __init__.py  schedcontrol.py
systemd/: meson.build  showcontrol.service.in
